# CUAAG

./: .gitignore  CMakeLists.txt  README.md  main  main.c  makefile
includes/: ascii.c  ascii.h  configuration.c  constants.h  creatematrix.c  debug.c  debug.h  image.c  image.h
lib/: arrayLength.c  stb_image_resize2.h
src/: main.c
